# MagicDrawing

./: .gitignore  AllProject.sln  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  MagicDrawing.Editor.csproj  MagicDrawing.Plugins.csproj  MagicDrawing.csproj  MagicDrawing.sln  MagicDrawing.userprefs  New Unity Project 1.Editor.csproj  New Unity Project 1.csproj  New Unity Project 1.sln  Output-Build.txt  buildAndroidGeos.cmd  buildWinGeos.cmd  namespace my  packages.config  parallelogramTagram.ai  run.cmd
Assets/: .gitignore  IMGUI.cs  Kinect.unity  NewBehaviourScript.cs  SoundControllerScript.cs  TweenBackButton.cs  TweenSprite.cs  UI Root.prefab  download_popup.prefab  s.cs  sound.prefab
Assets/Atlas/: MyAtlas.mat  MyAtlas.prefab  ThumbAtlas.mat  ThumbAtlas.prefab  english.mat  english.prefab  thumb-special.mat  thumb-special.prefab
Assets/BezierCurves/: Example.unity
Assets/Delicode NI mate/: NImateFeed.cs
Assets/Editor/: CloudBuildHelper.cs
Assets/Exported/: step1.atlas.txt  step1.json  step1_Atlas.asset  step1_Material.mat  step1_SkeletonData.asset  step2.atlas.txt  step2.json  step2_Atlas.asset  (+2 more)
GEOS/: .gitignore  GEOS.sln  GEOS.vcxproj  GEOS.vcxproj.filters  Source.cpp  Source2.cpp  s.cpp
MyApplication5/app/: CMakeCache.txt  CMakeLists.txt  build.gradle
MyApplication5/app/src/main/cpp/: PlatformBase.h  RenderingPlugin.cpp  native-lib.cpp  test.cpp  test.h
MyApplication5/app/src/main/java/com/example/mvduc/myapplication/: MainActivity.java
MyApplication5/app/src/main/res/layout/: activity_main.xml
MyApplication5/app/src/test/java/com/example/mvduc/myapplication/: ExampleUnitTest.java
OpenCV/: .gitignore  AddNoise.cpp  CannyAddDetector.h  CannyEdgeDetectionDemo.cpp  Contour.cpp  DirectEdgeDetector.cpp  Eroding and Dilating.cpp  FaceDetection.cpp  HoughLineTransform.cpp  KalmanFilter.cpp  LaplaceEdgeDetectionDemo.cpp  Morphological.cpp  OpenCV.vcxproj  OpenCV.vcxproj.filters  Sobel.cpp  SobelEdgeDetectionDemo.cpp  Source.cpp  ThreshHoldUsingInRange.cpp  Threshold.cpp  WriteVideoTest.cpp  live.avi
OpenCV3.3/: OpenCV3.3.sln
OpencvDLLTest/: OpencvDLLTest.vcxproj  Source.cpp
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
ReactiveNet/: Program.cs  ReactiveNet.csproj
ffmpeg/: run.cmd
geos-3.3.6/: Makefile  config.status  libtool
geos-3.6.2/: Makefile  config.status  geos_revision.h  libtool
geos-for-android-master/: Android.mk  Application.mk
lib/: .gitignore
libs/: .gitignore  buildAndroid.cmd  buildAndroid.sh  buildWin.cmd  configureAndroid.cmd
(+778 files in other folders)
